--- a/port-new.css
+++ b/port-new.css
@@ -196,9 +196,11 @@ path ,polyline{
 
 #imagery  #imglef{
 
-    width: 30%;
+    width: 45%;
     height: auto;
-    padding-left:3vw;
+    padding :3vw;
+    border: 1px solid ;
+    border-radius: 1vw;
     
 
 }
@@ -207,15 +209,19 @@ path ,polyline{
     /* background-color:rgb(219, 191, 238) ; */
    align-items: center;
    justify-content: center;
-    width: 30%;
+    width: 45%;
     height: auto;
+    padding :3vw;
+    border: 1px solid ;
+    border-radius: 1vw;
+    
     
 
 }
 
 #imagery h1{
-    font-weight: 300;
-    font-size: 5vw;
+    font-weight: 200;
+    font-size: 4vw;
     color: rgb(132, 93, 160);
     padding-bottom: 2vw;
     
@@ -224,8 +230,8 @@ path ,polyline{
 }
 
 #imagery li{
-    font-weight: 300;
-    font-size: 3vw;
+    font-weight: 150;
+    font-size: 2vw;
     letter-spacing: 1px;
     
 }
@@ -248,7 +254,7 @@ footer{
     
     display: flex;
     justify-content: space-between;
-    margin-top: 20vw;
+    margin-top: 22.3vw;
     width: 100%;
     padding: 0 7vw;
    
@@ -276,12 +282,13 @@ footer{
     height: 30vw;
     border-radius: 1vw;
     filter: grayscale();
-    transition : all cubic-bezier(0.19, 1, 0.22, 1)1s;
+    /* transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s; */
     background-color: red;
 }
 
 #intrig .intcntnr:hover{
     filter: grayscale(0);
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1.3s;
 }
 
 
