--- a/port-new.css
+++ b/port-new.css
@@ -6,7 +6,7 @@
 }
 html, body{
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 #main{
@@ -277,7 +277,7 @@ footer{
     justify-content: center;
     position: relative;
     width: 60%;
-    height: 300px;
+    height: auto;
 }
 #intrig .intcntnr{
     position: absolute;
